<resources>
    <string name="app_name">AstroWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rise">Wschód</string>
    <string name="sunset">Zachód</string>
    <string name="time">Czas:\u0020</string>
    <string name="azimuth">Azymut:\u0020</string>
    <string name="civil_sunset">Zachód cywilny</string>
    <string name="civil_sunrise">Wschód cywilny</string>
    <string name="nearest_new_moon">Najbliższy nów:\u0020</string>
    <string name="nearest_full_moon">Najbliższa pełnia:\u0020</string>
    <string name="new_moon_and_full_moon">Nów i pełnia</string>
    <string name="moon_phase">Faza księżyca</string>
    <string name="phase">Faza:\u0020</string>
    <string name="synodic_month">Miesiąc synodyczny</string>
    <string name="day">Dzień:\u0020</string>
    <string name="longtitude">Długość geograficzna</string>
    <string name="latitude">Szerokość geograficzna</string>
    <string name="save">Zapisz</string>
    <string name="action_settings">Ustawienia</string>
    <string name="sun">Słońce</string>
    <string name="moon">Księżyc</string>

    <string-array name="interval_values">
        <item>SECOND</item>
        <item>FIVE_SECONDS</item>
        <item>THIRTY_SECONDS</item>
        <item>MINUTE</item>
        <item>FIFTEEN_MINUTES</item>
    </string-array>

    <string-array name="speed_units">
        <item>mph</item>
        <item>kmh</item>
    </string-array>

    <string-array name="temp_units">
        <item>F</item>
        <item>C</item>
    </string-array>

    <string name="title_activity_favorite_locations">FavoriteLocationsActivity</string>
    <string name="favorites">Ulubione:</string>
    <string name="update_interval">Interwał odświeżania</string>
    <string name="location_input">Wpisz lokacje</string>
    <string name="set_location">Ustaw lokacje</string>
    <string name="min_temp">Minimalna temperatura</string>
    <string name="max_temp">Maksymalna temperatura</string>
    <string name="update">Aktualizuj</string>
    <string name="temp_units">Jednostki temperatury</string>
    <string name="speed_units">Jednostki prędkości</string>
    <string name="basic_info">Podstawowe informacje</string>
    <string name="additional_info">Dodatkowe informacje</string>
    <string name="fore_cast">Prognoza</string>
</resources>
